@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.31 [20110208] [svn: r379]
+Changelog for sg3_utils-1.31 [20110210] [svn: r382]
   - sg_decode_sense: new utility to decode sense data
   - sg_vpd: LB provisioning + Block limits pages (sbc3r26)
   - sync asc/ascq and version descriptors with spc4r28
@@ -13,6 +13,7 @@ Changelog for sg3_utils-1.31 [20110208] [svn: r379]
     indication (two places after decimal point)
   - sg_lib(win32): add runtime selection of SPT direct or
     indirect interface
+  - add examples/forwarded_sense.txt + examples/ref_sense.txt
 
 Changelog for sg3_utils-1.30 [20101111] [svn: r363]
   - sg_referrals: new utility for REPORT REFERRALS
